--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/json/json_menu_nested.html.twig
@@ -152,7 +152,7 @@
         <button type="button" class="btn btn-sm btn-outline-danger btn-json-menu-nested-delete"
                 title="{{- 'field_type.json_menu_editor.delete_item'|trans -}}"
                 data-item-id="{{ item.id }}">
-            <i class="fa fa-trash"></i>&nbsp;<span class="sr-only">{{- 'field_type.json_menu_editor.delete_item'|trans -}}</span>
+            <i class="fa fa-trash"></i>&nbsp;<span class="visually-hidden">{{- 'field_type.json_menu_editor.delete_item'|trans -}}</span>
         </button>
     {% endif %}
 {% endblock %}
