--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/modal.html.twig
@@ -8,7 +8,7 @@
             <div class="modal-body modal-loading">
                 <div class="progress" style="margin-bottom: 0;">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                        <span class="sr-only">100% Complete</span>
+                        <span class="visually-hidden">100% Complete</span>
                     </div>
                 </div>
             </div>
