--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/datatable/dom.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/datatable/dom.html.twig
@@ -15,7 +15,7 @@
                 <th class="nowrap" data-orderable="{{ column.orderable ? 'true' : 'false' }}" data-name="{{  column.attribute }}">
                     {% if column.iconClass %}
                         <i class="{{ column.iconClass }}" aria-hidden="true" title="{{ column.titleKey|trans|e('html_attr') }}"></i>
-                        <span class="sr-only">{{ column.titleKey|trans }}</span>
+                        <span class="visually-hidden">{{ column.titleKey|trans }}</span>
                     {% else %}
                         {{ column.titleKey|trans }}
                     {% endif %}
