--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/revision-toolbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/revision-toolbar.html.twig
@@ -87,7 +87,7 @@
 
 				<div class="btn-group">
 					<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-bs-toggle="dropdown">
-						<span class="sr-only">{{ 'views.elements.revision-toolbar-html.other-revision-actions'|trans }}</span>
+						<span class="visually-hidden">{{ 'views.elements.revision-toolbar-html.other-revision-actions'|trans }}</span>
 						<span class="fa fa-ellipsis-h"></span>
 					</button>
 					<ul class="dropdown-menu">
@@ -188,7 +188,7 @@
 			{% if emsco_is_super() and environmentsRevision.environments|length > 0 %}
 				<div class="btn-group">
 					<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-bs-toggle="dropdown">
-						<span class="sr-only">{{ 'views.elements.revision-toolbar-html.other-environment-actions'|trans }}</span>
+						<span class="visually-hidden">{{ 'views.elements.revision-toolbar-html.other-environment-actions'|trans }}</span>
 						<span class="fa fa-ellipsis-h"></span>
 					</button>
 					<ul class="dropdown-menu">
