--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/gallery_view.html.twig
@@ -56,11 +56,11 @@
                       <!-- Left and right controls -->
                       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
+                        <span class="visually-hidden">Previous</span>
                       </a>
                       <a class="right carousel-control" href="#myCarousel" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
+                        <span class="visually-hidden">Next</span>
                       </a>
                     </div>
         		</div>
